# nico-font-tool.python

./: README.md  font_service.py  main.py  pyproject.toml  requirements.txt
examples/: __init__.py  demo.py
src/nico_font_tool/: __init__.py  bdf.py  font.py  nicofont.py  opentype.py
tests/: __init__.py
